wiki-page-sidebar

--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -33,6 +33,14 @@
                     <p>
                         The back is usually a slightly darker brown than elsewhere with paler scapular feathers, ranging from tawny to white, forming a variable imperfect "V" on the back. The tail of most adults, which gives this species its name, is rufous brick-red above with a variably sized, black subterminal band and generally appears light buff-orange from below. In comparison, the typical pale immatures (i.e. less than two years old) typically have a mildly paler headed and tend to show a darker back than adults with more apparent pale wing-feather edges above.
                     </p>
+                    <h4>Identification</h4>
+                    <p>
+                        Although they overlap in range with most other American diurnal raptors, identifying most mature red-tailed hawks to species is relatively straightforward, particularly if viewing a typical adult at a reasonable distance. The red-tailed hawk is the only North American hawk with a rufous tail and a blackish patagium marking on the leading edge of its wing.
+                    </p>
+                    <h4>Vocalization</h4>
+                    <p>
+                        The cry of the red-tailed hawk is a 2- to 3-second, hoarse, rasping scream, variously transcribed as kree-eee-ar, tsee-eeee-arrr or sheeeeee that begins at a high pitch and slurs downward. The fierce, screaming cry of the adult red-tailed hawk is frequently used as a generic raptor sound effect in television shows and other media, even if the bird featured is not a red-tailed hawk. It is especially used in depictions of the bald eagle, which contributes to the common misconception that it is a bald eagle cry; actual bald eagle vocalizations are far softer and more chirpy than those of a red-tailed hawk.
+                    </p>
                 </div>
                 <div id="taxonomy">
                     <h3>Taxonomy</h3>
@@ -52,8 +60,13 @@
                         src="images/hawk1.jpeg"
                         alt="Red-tailed Hawk on branch"
                     >
+                    <h4>Flight</h4>
                     <p>   
                         In flight, this hawk soars with wings often in a slight dihedral, flapping as little as possible to conserve energy. Soaring is by far the most efficient method of flight for red-tailed hawks, so is used more often than not. Active flight is slow and deliberate, with deep wing beats. Wing beats are somewhat less rapid in active flight than in most other Buteo hawks, even heavier species such as ferruginous hawks tend to flap more swiftly, due to the morphology of the wings.
+                    </p>
+                    <h4>Migration</h4>
+                    <p>
+                        Red-tailed hawks are considered partial migrants, as in about the northern third of their distribution, which is most of their range in Canada and Alaska, they almost entirely vacate their breeding grounds. In coastal areas of the north, however, such as in the Pacific Northwest to southern Alaska and in Nova Scotia on the Atlantic, red-tailed hawks do not usually migrate. ore or less, any area where snow cover is nearly continuous during the winter shows an extended absence of most red-tailed hawks, so some areas as far south as Montana may show strong seasonal vacancies of red-tails.
                     </p>
                 </div>
                 <div id="habitat">
@@ -61,21 +74,35 @@
                     <p>
                         Red-tailed hawks have shown the ability to become habituated to almost any habitat present in North and Central America. Their preferred habitat is mixed forest and field, largely woodland edge with tall trees or alternately high bluffs that may be used as nesting and perching sites. They occupy a wide range of habitats and altitudes, including deserts, grasslands, nearly any coastal or wetland habitat, mountains, foothills, coniferous and deciduous woodlands, and tropical rainforests. 
                     </p>
-                    <p>  
-                        Agricultural fields and pastures, which are more often than not varied with groves, ridges, or streamside trees in most parts of America, may make nearly ideal habitat for breeding or wintering red-tails.
+                    <h4>The Woods</h4>
+                    <p>
+                        The woods provide nesting grounds for these large birds, as well. Secretive and solitary nesters, red-tailed hawks prefer to nest in thick, upland hardwood forests. They may use an old raptor nest as a base, or build a nest they may use and improve on year after year. Red-tails build a bulky nest of sticks 30 to 60 feet above the ground in the crotch of a tree, and they line it with moss, roots, grasses and other fine plant material.
+                    </p>
+                    <img
+                        src="images/hawk3.webp"
+                        alt="Red-Tailed Hawk in sky."
+                    >
+                    <h4>Adaptions</h4>
+                    <p>
+                        Red-tailed hawks like a mix of open country and deciduous forests, but they adapt to urban areas. Generally, they prefer the woods for nesting and roosting, and the fields for feeding. As day breaks, the hawks move to the woodland edge to perch and to soar. Red-tailed hawks frequently can be seen perching on telephone poles, tall trees or snags along roadsides. They sit high mainly to rest, but constantly keep watch for the slightest movement down below. To feed,they primarily soar up to 200 to 300 feet above open areas, scanning for favorite foods such as rodents, rabbits, amphibians, reptiles and insects. Often described as beautiful in flight, redtailed hawks have been observed soaring for hours without coming to a rest. 
                     </p>
                 </div>
                 <div id="diet">
                     <h3>Diet</h3>
                     <p>
-                        he red-tailed hawk is carnivorous, and a highly opportunistic feeder. Nearly any small animal they encounter may be viewed as potential food. Their most common prey are small mammals such as rodents and lagomorphs, but they also consume birds, reptiles, fish, amphibians, and invertebrates.
+                        he red-tailed hawk is carnivorous, and a highly opportunistic feeder. Nearly any small animal they encounter may be viewed as potential food. Their most common prey are small mammals such as rodents and lagomorphs, but they also consume birds, reptiles, fish, amphibians, and invertebrates. Prey varies considerably with regional and seasonal availability, but usually centers on rodents, accounting for up to 85% of a hawk's diet.
+                    </p>
+                    <h4>Birds</h4>
+                    <p>
+                        Red-tailed hawks do not primarily hunt birds in most areas, but can take them fairly often whenever they opportune upon some that are vulnerable. Birds are, by far, the most diverse class in the red-tailed hawk’s prey spectrum, with well over 200 species known in their foods.
                     </p>
                     <img
                         src="images/hawk4.jpeg"
                         alt="Red-tailed Hawk flying"
                     >
-                    <p>   
-                        Prey varies considerably with regional and seasonal availability, but usually centers on rodents, accounting for up to 85% of a hawk's diet.
+                    <h4>Mammals</h4>
+                    <p>
+                        Rodents are certainly the type of prey taken most often by frequency, but their contribution to prey biomass at nests can be regionally low, and the type, variety, and importance of rodent prey can be highly variable. In total, well over 100 rodent species have turned up the diet of red-tailed hawks.
                     </p>
                 </div>
                 <div id="reproduction">
@@ -85,6 +112,17 @@
                     </p>
                     <p>
                         One or both members of a pair may be involved. The courtship display often involves dangling legs, at times the pair will touching each other's wings and male's feet may touch female's back, she may occasionally roll over and present talons.
+                    </p>
+                    <h4>Nests</h4>
+                    <p>
+                        The pair constructs a stick nest most often in a large tree 4 to 21 m (13 to 69 ft) off the ground. They may too nest on virtually any man-made structures with some variety of ample ledges or surface space and good views of the surrounding environment (i.e. powerline poles, radio transmission towers, skyscraper buildings).  Much variation is recorded in nest usage behavior, many red-tails build new nests every year despite prior nests sometimes being in good standing and unoccupied, some may reuse a nest in subsequent years or may leave a nest for a year and then come back to it the following year.
+                    </p>
+                    <img
+                        src="images/hawk6.jpg"
+                    >
+                    <h4>Eggs</h4>
+                    <p>
+                        The eggs of red-tailed hawks are mostly white, sometimes with a faint buffy wash; at times the eggs manifest a sparsely or heavily marked with blotches of buff, pale reddish-brown, dark brown, or purple. The markings often appear indistinctly and may combine to form a fine speckling. They are incubated primarily by the female, with the male substituting when she leaves to hunt or merely stretch her wings.
                     </p>
                 </div>
             </div>
