--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -10,14 +10,16 @@
         <div id="section1">
             <div class="sidebar">
                 <h2>Contents</h2>
-                <ul>
-                    <li> <a href="#description">Description</a> </li>
-                    <li> <a href="#taxonomy">Taxonomy</a> </li>
-                    <li> <a href="#behavior">Behavior</a> </li>
-                    <li> <a href="#habitat">Habitat</a> </li>
-                    <li> <a href="#diet">Diet</a> </li>
-                    <li> <a href="#reproduction">Reproduction</a> </li>
-                </ul>
+                <div id="sidebar1">
+                    <ul>
+                        <li> <a href="#description">Description</a> </li>
+                        <li> <a href="#taxonomy">Taxonomy</a> </li>
+                        <li> <a href="#behavior">Behavior</a> </li>
+                        <li> <a href="#habitat">Habitat</a> </li>
+                        <li> <a href="#diet">Diet</a> </li>
+                        <li> <a href="#reproduction">Reproduction</a> </li>
+                    </ul>
+                </div>
             </div>
             <div class="main-content">
                 <h1>Red-Tailed Hawk</h1>
@@ -45,10 +47,28 @@
                 <div id="taxonomy">
                     <h3>Taxonomy</h3>
                     <p>
-                        he red-tailed hawk is a member of the subfamily Buteoninae, which includes about 55 currently recognized species. Diverse in plumage appearance, habitat, prey, and nesting preferences, buteonine hawks are nonetheless typically medium- to large-sized hawks with ample wings (while some fossil forms are very large, larger than any eagle alive today).
+                        The red-tailed hawk is a member of the subfamily Buteoninae, which includes about 55 currently recognized species. Diverse in plumage appearance, habitat, prey, and nesting preferences, buteonine hawks are nonetheless typically medium- to large-sized hawks with ample wings (while some fossil forms are very large, larger than any eagle alive today).
                     </p>
                     <p>    
                         The red-tailed hawk is a member of the genus Buteo, a group of medium-sized raptors with robust bodies and broad wings. Members of this genus are known as "buzzards" in Eurasia, but "hawks" in North America. Under current classification, the genus includes about 29 species, the second-most diverse of all extant accipitrid genera behind only Accipiter.
+                    </p>
+                    <h4>Subspecies</h4>
+                    <p>
+                        At least 14 recognized subspecies of B. jamaicensis are described, which vary in range and in coloration. Not all authors accept every subspecies, though, particularly some of the insular races of the tropics (which differ only slightly in some cases from the nearest mainland forms) and particularly Krider's hawk, by far the most controversial red-tailed hawk race, as few authors agree on its suitability as a full-fledged subspecies.
+                    </p>
+                    <h4>Subspecies Listed</h4>
+                    <p>
+                        <ul>
+                            <li>Jamaican red-tailed hawk</li>
+                            <li>Alaska red-tailed hawk</li>
+                            <li>Eastern red-tailed hawk</li>
+                            <li>Western red-tailed hawk</li>
+                            <li>Central American red-tailed hawk</li>
+                            <li>Southern red-tailed hawk</li>
+                            <li>Tres Narias red-tailed hawk</li>
+                            <li>Mexican Highlands red-tailed hawk</li>
+
+                        </ul>
                     </p>
                 </div>
                 <div id="behavior">
