--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -11,29 +11,30 @@
             <div id="sidebar">
                 <h2>Categories</h2>
                 <ul>
-                    <li> <a href="#">Link 1</a> </li>
-                    <li> <a href="#">Link 2</a> </li>
-                    <li> <a href="#">Link 3</a> </li>
+                    <li> <a href="#">Fluffy Cats</a> </li>
+                    <li> <a href="#">Hypoallergenic Cats</a> </li>
+                    <li> <a href="#">Affectionate Cats</a> </li>
                 </ul>
-                <h2>Posts</h2>
+                <h2>Kitty Posts</h2>
                 <ul>
-                    <li> <a href="#">Link 1</a> </li>
-                    <li> <a href="#">Link 2</a> </li>
-                    <li> <a href="#">Link 3</a> </li>
-                    <li> <a href="#">Link 4</a> </li>
+                    <li> <a href="#">Monday</a> </li>
+                    <li> <a href="#">Tuesday</a> </li>
+                    <li> <a href="#">Wednesday</a> </li>
+                    <li> <a href="#">Thursday</a> </li>
+                    <li> <a href="#">Friday</a> </li>
+                    <li> <a href="#">Saturday</a> </li>
+                    <li> <a href="#">Sunday</a> </li>
                 </ul>
             </div>
             <div id="main-content">
-                <h1>Lorem Ipsum Dolor</h1>
+                <h1>My Favorite Type of Cats</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ab, tempore atque at commodi temporibus rem perspiciatis reiciendis vitae doloribus quasi. Sit repellendus debitis reiciendis, nulla eligendi tempora distinctio voluptatem!
+                    While it's hard to narrow down all the cats in the world into different categories of my favorites, I've finally dont it. I've come up witht three distinct cateogries based on what's most important to me, in regards to cats: Fluffy cats, hypoallergenic cats, and affection cats.
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quia similique sapiente quas esse rem, voluptatem quam laborum. Excepturi esse quidem eligendi odit illum, voluptates itaque vitae neque hic vero?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, voluptate. Vel rerum earum ullam minus officia aperiam, excepturi repudiandae mollitia dignissimos corrupti eligendi nemo deserunt, doloribus provident consectetur odit commodi!
-                </p>
+                <img
+                    src="images/cat1.jpg"
+                    alt=""
+                >
             </div>
         </div>
     </body>
