--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -11,7 +11,7 @@
             <div id="sidebar">
                 <h2>Categories</h2>
                 <ul>
-                    <li> <a href="#">Fluffy Cats</a> </li>
+                    <li> <a href="#fluffycats">Fluffy Cats</a> </li>
                     <li> <a href="#">Hypoallergenic Cats</a> </li>
                     <li> <a href="#">Affectionate Cats</a> </li>
                 </ul>
@@ -26,15 +26,18 @@
                     <li> <a href="#">Sunday</a> </li>
                 </ul>
             </div>
-            <div id="main-content">
+            <div id="main-content1">
                 <h1>My Favorite Type of Cats</h1>
                 <p>
                     While it's hard to narrow down all the cats in the world into different categories of my favorites, I've finally dont it. I've come up witht three distinct cateogries based on what's most important to me, in regards to cats: Fluffy cats, hypoallergenic cats, and affection cats.
                 </p>
                 <img
                     src="images/cat1.jpg"
-                    alt=""
+                    alt="cat next to laptop"
                 >
+                <p id="fluffycats">
+                    Test
+                </p>
             </div>
         </div>
     </body>
