--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -12,18 +12,14 @@
                 <h2>Categories</h2>
                 <ul>
                     <li> <a href="#fluffycats">Fluffy Cats</a> </li>
-                    <li> <a href="#">Hypoallergenic Cats</a> </li>
-                    <li> <a href="#">Affectionate Cats</a> </li>
+                    <li> <a href="#hypocats">Hypoallergenic Cats</a> </li>
+                    <li> <a href="#affection">Affectionate Cats</a> </li>
                 </ul>
                 <h2>Kitty Posts</h2>
                 <ul>
-                    <li> <a href="#">Monday</a> </li>
-                    <li> <a href="#">Tuesday</a> </li>
-                    <li> <a href="#">Wednesday</a> </li>
-                    <li> <a href="#">Thursday</a> </li>
-                    <li> <a href="#">Friday</a> </li>
-                    <li> <a href="#">Saturday</a> </li>
-                    <li> <a href="#">Sunday</a> </li>
+                    <li> <a href="#cute">Cute!</a> </li>
+                    <li> <a href="#fiesty">Fiesty!</a> </li>
+                    <li> <a href="#sleepy">Sleepy!</a> </li>
                 </ul>
             </div>
             <div id="main-content1">
@@ -35,9 +31,73 @@
                     src="images/cat1.jpg"
                     alt="cat next to laptop"
                 >
-                <p id="fluffycats">
-                    Test
+                <h2 id="fluffycats">Fluffy Cats</h2>
+                <p>
+                    The cat (Felis catus) is a domestic species of small carnivorous mammal. It is the only domesticated species in the family Felidae and is commonly referred to as the domestic cat or house cat to distinguish it from the wild members of the family.
                 </p>
+                <p>
+                    Cats are commonly kept as house pets but can also be farm cats or feral cats; the feral cat ranges freely and avoids human contact. Domestic cats are valued by humans for companionship and their ability to kill vermin. About 60 cat breeds are recognized by various cat registries.
+                </p>
+                <img
+                    src="images/cat2.jpg"
+                    alt="fluffy cat"
+                >
+                <p>
+                    The cat is similar in anatomy to the other felid species: it has a strong flexible body, quick reflexes, sharp teeth, and retractable claws adapted to killing small prey like mice and rats. Cat communication includes vocalizations like meowing, purring, trilling, hissing, growling, and grunting as well as cat-specific body language. 
+                </p>
+                <h2 id="hypocats">Hypoallergenic Cats</h2>
+                <p>
+                    A hypoallergenic cat is a cat that is less likely to provoke an allergic reaction in humans. Although the topic is controversial, owners' experiences and clinical studies suggest that Siberian cats, Siamese and Cornish Rex cats, Abyssinian cats, Balinese cats, and several other breeds, especially females, are likely to have low levels of Fel d 1, the main allergenic protein.
+                </p>
+                <img
+                    src="images/cat6.jpg"
+                    alt="hypoallergenic cat"
+                >
+                <p>
+                    From among the above cats noted, the most popular cat breeds to be renowned for their hypoallergenic quality are the Siberian and Balinese. These cats produce much fewer protein allergens in comparison to regular domestic household cats or other cat breeds.
+                </p>
+                <p>
+                    Cats that have some Balinese ancestry might produce lower amounts of protein allergens. Cat breeds that often have some Balinese lineage include the Oriental Shorthair, Oriental Longhair, and some Siamese cats.
+                </p>
+                <h2 id="affection">Affectionate Cats</h2>
+                <p>
+                    Your cat wants a solid bond with you, which it always builds. Mornings happen to be a great place to start the interaction. Cats are intelligent. They will use unique, complex cues and signs to measure how far your relationship has grown. 
+                </p>
+                <p>
+                    Their emotional bond grows more profound as they continue living under your roof.  You may stay uninterested in your cat’s morning behavior if you don’t read these cues positively. But, also, this could mean you don’t understand its welfare. The result is a poor-quality relationship.
+                </p>
+                <img
+                    src="images/cat4.jpg"
+                    alt="fluffy cat"
+                >
+                <p>
+                    Think of when you ignored your cat’s calls, yelled at it, or bashed it off. These instances, especially yelling or hitting, can be scary to the cat. Eventually, the cat starts to avoid you, which begins a cold-shoulder reaction. That means even if you don’t like the morning cuddles, don’t overreact to your cat. There are better ways of communicating with it–like saying the ssss-cat sound.
+                </p>
+                <br>
+                <hr>
+                <br>
+                <h1 id="header2">Kitty Posts</h1>
+                <div id="cute">
+                    <h2>Cute!</h2>
+                    <img
+                        src="images/cat5.jpg"
+                        alt="My family's cat, Coco"
+                    >
+                </div>
+                <div id="fiesty">
+                    <h2>Fiesty!</h2>
+                    <img
+                        src="images/cat8.jpeg"
+                        alt="My other cat, Bradley"
+                    >
+                </div>
+                <div id="sleepy">
+                    <h2>Sleepy!</h2>
+                    <img
+                        src="images/cat7.JPG"
+                        alt="Bradley being sleepy"
+                    >
+                </div>
             </div>
         </div>
     </body>
