--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -80,7 +80,7 @@
                 <div id="cute">
                     <h2>Cute!</h2>
                     <img
-                        src="images/cat5.jpg"
+                        src="images/cat5.JPG"
                         alt="My family's cat, Coco"
                     >
                 </div>
