--- a/exercises/blog-with-sidebar/index.html
+++ b/exercises/blog-with-sidebar/index.html
@@ -25,7 +25,7 @@
             <div id="main-content1">
                 <h1>My Favorite Type of Cats</h1>
                 <p>
-                    While it's hard to narrow down all the cats in the world into different categories of my favorites, I've finally dont it. I've come up witht three distinct cateogries based on what's most important to me, in regards to cats: Fluffy cats, hypoallergenic cats, and affection cats.
+                    While it's hard to narrow down all the cats in the world into different categories of my favorites, I've finally done it. I've come up witht three distinct cateogries based on what's most important to me in regards to cats: Fluffy cats, hypoallergenic cats, and affectionate cats.
                 </p>
                 <img
                     src="images/cat1.jpg"
