--- a/exercises/mebay-product-page/index.html
+++ b/exercises/mebay-product-page/index.html
@@ -7,6 +7,33 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="three-columns">
+            <div id="column-1">
+                <img
+                    src="images/jeanmicheal.jpeg"
+                    alt="Painting by Jean-Micheal Basquiat"
+                >
+            </div>
+            <div id="column-2">
+                <h3>Lorem ipsum dolor</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Porro, commodi similique ipsa tempora perspiciatis, sed 
+                    exercitationem reprehenderit sapiente a cumque voluptates 
+                    veniam est, quia totam voluptatibus eaque consectetur 
+                    optio ipsum.
+                </p>
+            </div>
+            <div id="column-3">
+                <h3>Rolod muspi merol</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Dolore architecto explicabo reprehenderit vel saepe, 
+                    illum vitae dicta tempora aperiam repellendus sed 
+                    aspernatur corrupti consequatur culpa ratione dolor
+                    tempore quas ipsa.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
