--- a/exercises/mebay-product-page/index.html
+++ b/exercises/mebay-product-page/index.html
@@ -15,24 +15,45 @@
                 >
             </div>
             <div id="column-2">
-                <h3>Lorem ipsum dolor</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Porro, commodi similique ipsa tempora perspiciatis, sed 
-                    exercitationem reprehenderit sapiente a cumque voluptates 
-                    veniam est, quia totam voluptatibus eaque consectetur 
-                    optio ipsum.
-                </p>
+                <h2>JEAN-MICHEL BASQUIAT painting on paper signed and stamped 8.3 x 11.7 in</h2>
+                <div id="condition">
+                    <p>Condition: <b>Used</b></p>
+                </div>
+                <div id="purchase">
+                    <div id="price-info">
+                        <p class="p">Price: <b>US $145.00</b> </p>
+                        <a href="#">No interest if paid in full in 6 mo on $99+ with PayPal Credit</a>
+                    </div>
+                    <div id="buttons">
+                        <p class="button-1">
+                            Buy it Now
+                        </p>
+                        <p class="button-2"> 
+                            Add to Cart
+                        </p>
+                    </div>
+                </div>
+                <hr>
+                <div id="offer">
+                    <p>Best Offer: <b>$145.00</b></p>
+                    <div id="button-3">
+                        <p>Make Offer</p>
+                    </div>
+                </div>
             </div>
             <div id="column-3">
-                <h3>Rolod muspi merol</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Dolore architecto explicabo reprehenderit vel saepe, 
-                    illum vitae dicta tempora aperiam repellendus sed 
-                    aspernatur corrupti consequatur culpa ratione dolor
-                    tempore quas ipsa.
-                </p>
+                <div id="shop">
+                    <p>Shop With Confidence</p>
+                    <p> <b>eBay Money Back Guarantee</b> </p>
+                    <p> <i>Get the item you ordered or your money back.</i> </p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div id="seller-info">
+                    <p>Seller Information</p>
+                    <a href="#">kae_kluding_22</a>
+                    <a href="#">(53)</a>
+                    <p>100% positive feedback</p>
+                </div>
             </div>
         </div>
     </body>
