--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -3,10 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Metube</title>
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="grid-layout">
+            <div id="header">
+                <h1> <a href="#">BRAND NAME</a> </h1>
+            </div>
+            <div id="sidebar">
+                <ul>
+                    <li> <a href="#">Home</a> </li>
+                    <li> <a href="#">Shorts</a> </li>
+                    <li> <a href="#">Subscriptions</a> </li>
+                </ul>
+                <ul>
+                    <li> <a href="#">Library</a> </li>
+                    <li> <a href="#">History</a> </li>
+                    <li> <a href="#">Your Vidoes</a> </li>
+                    <li> <a href="#">Watch Later</a> </li>
+                    <li> <a href="#">Liked Videos</a> </li>
+                </ul>
+            </div>
+            <div id="main">
+                <h2>Main Content Section (replace later)</h2>
+            </div>
+        </div>
     </body>
 </html>
