--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -9,7 +9,11 @@
     <body>
         <div id="grid-layout">
             <div id="header">
-                <h1> <a href="#">BRAND NAME</a> </h1>
+                <h1>
+                    <a href="#">
+                        <span id="me">Me</span><span id="tube">Tube</span>
+                    </a>
+                </h1>
             </div>
             <div id="sidebar">
                 <ul>
