--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -30,7 +30,102 @@
                 </ul>
             </div>
             <div id="main">
-                <h2>Main Content Section (replace later)</h2>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder">
+
+                    </div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">
+                            Channel
+                        </div>
+                        <div class="views-posts">
+                            <span class="video-views">1.9K views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder">
+
+                    </div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">
+                            Channel
+                        </div>
+                        <div class="views-posts">
+                            <span class="video-views">1.9K views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder">
+
+                    </div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">
+                            Channel
+                        </div>
+                        <div class="views-posts">
+                            <span class="video-views">1.9K views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder">
+
+                    </div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">
+                            Channel
+                        </div>
+                        <div class="views-posts">
+                            <span class="video-views">1.9K views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder">
+
+                    </div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">
+                            Channel
+                        </div>
+                        <div class="views-posts">
+                            <span class="video-views">1.9K views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="metube-item">
+                    <div class="thumbnail-placeholder">
+
+                    </div>
+                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <div class="video-details">
+                        <div class="video-channel">
+                            Channel
+                        </div>
+                        <div class="views-posts">
+                            <span class="video-views">1.9K views</span>
+                            &bull;
+                            <span class="video-post">8 hours ago</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
