--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -32,97 +32,115 @@
             <div id="main">
                 <div class="metube-item">
                     <div class="thumbnail-placeholder">
-
+                        <img
+                            src="images/video2.jpeg"
+                            alt="zachbealetv"
+                        >
                     </div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <h4><a href="#">Zach Watches Horrifying Videos</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
-                            Channel
+                            zachbealetv
                         </div>
                         <div class="views-posts">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">238K views</span>
                             &bull;
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">2 days ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="metube-item">
                     <div class="thumbnail-placeholder">
-
+                        <img
+                            src="images/video7.jpeg"
+                            alt="kendall rae"
+                        >
                     </div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <h4><a href="#">Hit By His Own Truck or Was He Murdered?! The Suspicious Death of Grant Solomon</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
-                            Channel
+                            Kendall Rae
                         </div>
                         <div class="views-posts">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">1.6M</span>
                             &bull;
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">3 months ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="metube-item">
                     <div class="thumbnail-placeholder">
-
+                        <img
+                            src="images/video4.jpeg"
+                            alt="BOZE"
+                        >
                     </div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <h4><a href="#">Boze, Unfortunately, Finds Out Who Onision Is</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
-                            Channel
+                            BOZE vs. the WORLD
                         </div>
                         <div class="views-posts">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">65K views</span>
                             &bull;
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">1 year ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="metube-item">
                     <div class="thumbnail-placeholder">
-
+                        <img
+                            src="images/video5.jpeg"
+                            alt="game grumps"
+                        >
                     </div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <h4><a href="#">House Party: Widest Party Ever - PART 1 - Game Grumps</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
-                            Channel
+                            GameGrumps
                         </div>
                         <div class="views-posts">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">3.5M views</span>
                             &bull;
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">5 years ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="metube-item">
                     <div class="thumbnail-placeholder">
-
+                        <img
+                            src="images/vid6.jpeg"
+                            alt="jackie boy"
+                        >
                     </div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <h4><a href="#">FUNNIEST Videos I Found On TikTok</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
-                            Channel
+                            jacksepticeye
                         </div>
                         <div class="views-posts">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">4.1M views</span>
                             &bull;
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">1 year ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="metube-item">
                     <div class="thumbnail-placeholder">
-
+                        <img
+                            src="images/video8.jpeg"
+                            alt="ants canada"
+                        >
                     </div>
-                    <h4><a href="#">MeTube Video Title</a></h4>
+                    <h4><a href="#">My New BULLET ANT Colony</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
-                            Channel
+                            AntsCanada
                         </div>
                         <div class="views-posts">
-                            <span class="video-views">1.9K views</span>
+                            <span class="video-views">1.7M views</span>
                             &bull;
-                            <span class="video-post">8 hours ago</span>
+                            <span class="video-post">3 years ago</span>
                         </div>
                     </div>
                 </div>
