metube-linkupdate-finished

--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -37,7 +37,7 @@
                             alt="zachbealetv"
                         >
                     </div>
-                    <h4><a href="#">Zach Watches Horrifying Videos</a></h4>
+                    <h4><a href="https://www.youtube.com/watch?v=imLGKBCbTxo" target="_blank">Zach Watches Horrifying Videos</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
                             zachbealetv
@@ -56,7 +56,7 @@
                             alt="kendall rae"
                         >
                     </div>
-                    <h4><a href="#">Hit By His Own Truck or Was He Murdered?! The Suspicious Death of Grant Solomon</a></h4>
+                    <h4><a href="https://www.youtube.com/watch?v=1dcXDJDqVLk&t=3336s" target="_blank">Hit By His Own Truck or Was He Murdered?! The Suspicious Death of Grant Solomon</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
                             Kendall Rae
@@ -75,7 +75,7 @@
                             alt="BOZE"
                         >
                     </div>
-                    <h4><a href="#">Boze, Unfortunately, Finds Out Who Onision Is</a></h4>
+                    <h4><a href="https://www.youtube.com/watch?v=--WmTk4Z_qY" target="_blank">Boze, Unfortunately, Finds Out Who Onision Is</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
                             BOZE vs. the WORLD
@@ -94,7 +94,7 @@
                             alt="game grumps"
                         >
                     </div>
-                    <h4><a href="#">House Party: Widest Party Ever - PART 1 - Game Grumps</a></h4>
+                    <h4><a href="https://www.youtube.com/watch?v=KxRqAuHNXFM" target="_blank">House Party: Widest Party Ever - PART 1 - Game Grumps</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
                             GameGrumps
@@ -113,7 +113,7 @@
                             alt="jackie boy"
                         >
                     </div>
-                    <h4><a href="#">FUNNIEST Videos I Found On TikTok</a></h4>
+                    <h4><a href="https://www.youtube.com/watch?v=5B6muQt0T9I" target="_blank">FUNNIEST Videos I Found On TikTok</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
                             jacksepticeye
@@ -132,7 +132,7 @@
                             alt="ants canada"
                         >
                     </div>
-                    <h4><a href="#">My New BULLET ANT Colony</a></h4>
+                    <h4><a href="https://www.youtube.com/watch?app=desktop&v=3-O49cchLxM" target="_blank">My New BULLET ANT Colony</a></h4>
                     <div class="video-details">
                         <div class="video-channel">
                             AntsCanada
