--- a/demos/cards-buttons-gradients-demo/index.html
+++ b/demos/cards-buttons-gradients-demo/index.html
@@ -17,6 +17,33 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 <a href="#" class="anchor-button">Buy Now</a>
             </div>
+            <div class="card">
+                <img
+                    src="images/pic2.jpg"
+                    alt="pic 2"
+                >
+                <h2>Picture 2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <a href="#" class="anchor-button">Buy Now</a>
+            </div>
+            <div class="card">
+                <img
+                    src="images/pic3.jpg"
+                    alt="pic 1"
+                >
+                <h2>Picture 3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <a href="#" class="anchor-button">Buy Now</a>
+            </div>
+            <div class="card">
+                <img
+                    src="images/pic4.jpg"
+                    alt="pic 1"
+                >
+                <h2>Picture 4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <a href="#" class="anchor-button">Buy Now</a>
+            </div>
         </div>
     </body>
 </html>
